done all with resposive

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Farhan Ahmed Nahid" />
     <title>Mac Book - Pro</title>
+    <!-- link favicon -->
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
     <!-- external css file link -->
     <link rel="stylesheet" href="./assets/styles/style.css" />
     <link rel="stylesheet" href="./assets/styles/responsive.css" />
@@ -30,8 +32,12 @@
             Magic Keyboard US English.
           </p>
 
+          <!-- mac configuration start -->
+
           <div class="mac__configuration">
-            <!-- memory button section -->
+              
+            <!-- memory buttons section start -->
+
             <div class="memory">
               <h3>Memory</h3>
               <div class="button__container">
@@ -49,7 +55,11 @@
                 </button>
               </div>
             </div>
-            <!-- storage buttons section -->
+
+            <!-- memory buttons section end -->
+
+            <!-- storage buttons section start -->
+
             <div class="storage">
               <h3>Storage</h3>
               <div class="button__container">
@@ -73,7 +83,11 @@
                 </button>
               </div>
             </div>
-            <!-- delivery cost buttons section -->
+
+            <!-- storage buttons section end -->
+
+            <!-- delivery cost buttons section start -->
+
             <div class="delivery__cost">
               <h3>Choose Your Delivery Option</h3>
               <div class="button__container">
@@ -91,7 +105,11 @@
                 </button>
               </div>
             </div>
-            <!-- calculate total in table section -->
+
+            <!-- delivery cost buttons section start -->
+
+            <!-- calculate total in table section start -->
+
             <table>
               <tbody>
                 <tr>
@@ -128,7 +146,11 @@
                 </tr>
               </tfoot>
             </table>
-            <!-- promo code section -->
+
+            <!-- calculate total in table section end -->
+
+            <!-- promo code section start -->
+
             <div class="promo__code">
               <h3>Add Promo Code</h3>
               <input
@@ -138,11 +160,13 @@
               />
               <button id="promo__code__button">Apply</button>
             </div>
+
+            <!-- promo code section end -->
           </div>
+          <!-- mac configuration end -->
         </div>
         <!-- content part end -->
       </section>
-      <!-- website main section end -->
 
       <!-- total cost section start -->
       <section class="total__cost">
@@ -150,6 +174,7 @@
       </section>
       <!-- total cost section end -->
     </main>
+    <!-- website main section end -->
 
     <!-- external javaScript file link -->
     <script src="./assets/js/app.js"></script>
