--- a/index.html
+++ b/index.html
@@ -13,16 +13,21 @@
     <link rel="stylesheet" href="./assets/styles/responsive.css" />
   </head>
   <body>
+    <!-- website main part start -->
+
     <main class="container">
-      <!-- website main section start -->
       <section id="main__section">
+
         <!-- image part start -->
+
         <div class="mac__image">
           <img src="./assets/images/mac.png" alt="mac" />
         </div>
+
         <!-- image part end -->
 
         <!-- content part start -->
+
         <div class="mac__content">
           <h1>Customize your Blue 24 inch iMac with Apple M1 CHIP</h1>
           <p>
@@ -35,7 +40,7 @@
           <!-- mac configuration start -->
 
           <div class="mac__configuration">
-              
+            
             <!-- memory buttons section start -->
 
             <div class="memory">
