--- a/index.html
+++ b/index.html
@@ -95,28 +95,20 @@
             <table>
               <tbody>
                 <tr>
-                  <td class="table__title">Best Price</td>
-                  <td class="table__number">
-                    $<span id="best__price">1299</span>
-                  </td>
+                  <td>Best Price</td>
+                  <td>$<span id="best__price">1299</span></td>
                 </tr>
                 <tr>
-                  <td class="table__title">Extra Memory Cost</td>
-                  <td class="table__number">
-                    $<span id="memory__cost">0</span>
-                  </td>
+                  <td>Extra Memory Cost</td>
+                  <td>$<span id="memory__cost">0</span></td>
                 </tr>
                 <tr>
-                  <td class="table__title">Extra Storage Cost</td>
-                  <td class="table__number">
-                    $<span id="storage__cost">0</span>
-                  </td>
+                  <td>Extra Storage Cost</td>
+                  <td>$<span id="storage__cost">0</span></td>
                 </tr>
                 <tr>
-                  <td class="table__title border__none">Delivery Charge</td>
-                  <td class="table__number border__none">
-                    $<span id="delivery__cost">0</span>
-                  </td>
+                  <td>Delivery Charge</td>
+                  <td>$<span id="delivery__cost">0</span></td>
                 </tr>
               </tbody>
               <tfoot>
@@ -149,14 +141,14 @@
         </div>
         <!-- content part end -->
       </section>
-
-      <!-- total cost section start -->
-      <section class="total__cost">
-        <h1>Total: $<span id="footer__total">1299</span></h1>
-      </section>
-      <!-- total cost section end -->
     </main>
     <!-- website main section end -->
+
+    <!-- total cost section start -->
+    <footer>
+      <h1>Total: $<span id="footer__total">1299</span></h1>
+    </footer>
+    <!-- total cost section end -->
 
     <!-- external javaScript file link -->
     <script src="./assets/js/app.js"></script>
